--- a/styles/style.css
+++ b/styles/style.css
@@ -13,14 +13,26 @@ body {
 
 main {
     display: flex;
-    justify-content: center;
+    width: 100vw;
+    flex-direction: column;
+    gap: 2em;
+}
+
+section {
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto;
+    border-radius: 6px;
 }
 
 .container {
     background-color: white;
     width: 70vw;
-    height: 85vh;
     padding: 33px 50px;
+}
+
+footer {
+    text-align: center;
 }
 
 :root {
@@ -37,8 +49,51 @@ main {
     --orange-bg-color: #FEE5DF;
 }
 
-/******************** Top Players Starts ************************/
+/****************************** Header Starts *****************************/
+header li {
+    list-style: none;
+}
 
+header li a {
+    text-decoration: none;
+
+    color: #D1D1D1;
+}
+
+.logo {
+    display: flex;
+    gap: 1em;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.nav_bar ul {
+    display: flex;
+    gap: 1.5em;
+    align-items: center;
+}
+
+header {
+    color: white;
+    background-color: #562EFF;
+    width: 100vw;
+    display: flex;
+    height: 12vh;
+    align-items: center;
+    justify-content: space-around;
+}
+
+header .logo img {
+    width: 8%;
+}
+
+/****************************** Header Ends *****************************/
+
+/******************** Top Player Starts ************************/
+
+.pb {
+    margin-top: 50px;
+}
 
 .section_title {
     color: var(--header-text-color);
@@ -62,18 +117,24 @@ main {
     justify-content: center;
 }
 
-/******************** Top Players Ends ************************/
+/******************** Top Player Ends ************************/
 
 hr {
     border: 1px solid #D1D1D1;
     margin: 30px 0;
 }
 
-/******************** Top Blogs Starts ************************/
+/******************** Top Blog Starts ************************/
+
+.blogs {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    row-gap: 1.5em;
+}
 
 .blog {
-    width: 360px;
-    height: 120px;
+    width: 400px;
+    /* height: 120px; */
     display: flex;
     gap: 1em;
 }
@@ -98,6 +159,148 @@ hr {
     color: #562EFF;
 }
 
+/******************** Top Blog Ends ************************/
 
 
-/******************** Top Blogs Ends ************************/
+/******************** Latest Course Starts ************************/
+
+.courses {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.course {
+    width: 260px;
+    box-shadow: 0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05);
+    padding: 14px 17px;
+    border-radius: 6px;
+}
+
+.course .course_banner img {
+    width: 224px;
+}
+
+.course_title {
+    font-size: 20.0336px;
+}
+
+.course_author {
+    color: var(--author-color);
+}
+
+.filled {
+    color: #FFC014;
+}
+
+.empty {
+    color: #AEAEAE;
+}
+
+.raitings p {
+    font-size: 14px;
+    color: #AEAEAE;
+}
+
+.duration {
+    background-color: var(--pink-bg-color);
+    padding: 6px;
+    border-radius: 14.6913px;
+}
+
+.duration p {
+    font-size: 14px;
+    color: var(--pink-icon);
+}
+
+.course_info {
+    display: flex;
+    gap: 1em;
+    align-items: center;
+
+}
+
+.orange {
+    background-color: var(--orange-bg-color);
+}
+
+.orange p {
+    color: var(--orange-icon);
+}
+
+.lc {
+    margin-bottom: 50px;
+}
+
+/******************** Latest Course Ends ************************/
+
+/****************************** Media Query ***************************/
+
+/************** Mobile View **************/
+
+@media only screen and (max-width:688px) {
+
+    .container {
+        width: 100%;
+    }
+
+    .players,
+    .blogs,
+    .courses {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .player,
+    .blog {
+        flex-direction: column;
+    }
+
+    .blog-info {
+        width: 80%;
+    }
+}
+
+/*********** Tablet View *********/
+
+@media only screen and (min-width:689px) and (max-width:992px) {
+
+    .players,
+    .blogs {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+    .blogs {
+        row-gap: 1.5em;
+    }
+
+    .blog {
+        width: 100%;
+    }
+
+    .courses {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    .blog-info {
+        width: 60%;
+    }
+
+    .player,
+    .blog {
+        flex-direction: column;
+    }
+}
+
+/*********** Labtop View **********/
+
+@media only screen and (min-width:993px) and (max-width:1180px) {
+    .blog {
+        width: 100%;
+        flex-direction: column;
+    }
+
+    .blog-info {
+        width: 50%;
+    }
+
+
+}
